Fix Font and Alignment #11

--- a/LojaFresno/css/pages/search.css
+++ b/LojaFresno/css/pages/search.css
@@ -9,7 +9,7 @@
 }
 
 .personalizedFilter .form-group {
-    margin-top: -5px;
+    margin-top: 0px;
 }
 
 .page-search .catalog-content {
